WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85656
The computed style of flex-item-align should never be auto.
https://bugs.webkit.org/show_bug.cgi?id=85656
Summary
The computed style of flex-item-align should never be auto.
Tony Chang
Reported
2012-05-04 13:16:43 PDT
The computed style of flex-item-align should never be auto.
Attachments
Patch
(4.62 KB, patch)
2012-05-04 13:18 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2012-05-04 13:18:47 PDT
Created
attachment 140303
[details]
Patch
Tony Chang
Comment 2
2012-05-04 13:19:58 PDT
See discussion here:
http://lists.w3.org/Archives/Public/www-style/2012Apr/0831.html
WebKit Review Bot
Comment 3
2012-05-04 14:14:29 PDT
Comment on
attachment 140303
[details]
Patch Clearing flags on attachment: 140303 Committed
r116166
: <
http://trac.webkit.org/changeset/116166
>
WebKit Review Bot
Comment 4
2012-05-04 14:14:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug