The computed style of flex-item-align should never be auto. https://bugs.webkit.org/show_bug.cgi?id=85656

Reviewed by Ojan Vafai.

Source/WebCore:

If the node lacks a parent and flex-item-align is auto, we should
return stretch. This was recently clarified in the spec.

New testcase in css3/flexbox/css-properties.html.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

* css3/flexbox/css-properties-expected.txt:
* css3/flexbox/css-properties.html:


Canonical link: https://commits.webkit.org/103234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116166 268f45cc-cd09-0410-ab3c-d52691b4dbfc